--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -w",
-    "start": "npm run start-server ",
+    "start": "npm run start-server & npm run build ",
     "start-server": "nodemon ./server/main.js"
   },
   "keywords": [],
